welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
droite()
^Balin:22: error: illegal start of simple expression
	}
        ^